--- a/src/scss/layout/_main.scss
+++ b/src/scss/layout/_main.scss
@@ -21,6 +21,7 @@ body {
   display: flex;
   justify-content: center;
   min-height: 100vh;
+  font-family: 'Lobster', cursive;
 }
 
 .btn-main {
@@ -28,9 +29,9 @@ body {
   background: transparent;
   border: 0;
   cursor: pointer;
-  font-family: 'Lobster', cursive;
   font-size: 42px;
   height: 60px;
+  font-family: 'Lobster', cursive;
   outline: none;
   padding: 0 20px;
   transition: transform 0.5s ease;
@@ -38,6 +39,13 @@ body {
   &:hover {
     transform: scale(1.15);
   }
+}
+
+.thank-message {
+  display: none;
+  font-family: 'Lobster', cursive;
+  font-size: 42px;
+  font-weight: 400;
 }
 
 .popup {
